--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "@angular/platform-browser-dynamic": "~10.1.3",
     "@angular/router": "~10.1.3",
     "@angular/service-worker": "~10.1.3",
+    "@azure/ng-deploy": "^0.2.3",
+    "@sendgrid/mail": "^7.2.6",
+    "azure-storage": "^2.10.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
