--- a/src/web.config
+++ b/src/web.config
@@ -3,7 +3,10 @@
 <configuration>
     <system.webServer>
         <staticContent>
+            <remove fileExtension=".json" />
             <mimeMap fileExtension=".json" mimeType="application/json" />
+            <remove fileExtension=".webmanifest" />
+            <mimeMap fileExtension=".webmanifest" mimeType="application/json" />
         </staticContent>
     </system.webServer>
 </configuration> 
