--- a/src/web.config
+++ b/src/web.config
@@ -1,21 +1,10 @@
+<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <system.webServer>
-         <rewrite>
-            <rules>
-              <rule name="AngularJS Routes" stopProcessing="true">
-                <match url=".*" />
-                <conditions logicalGrouping="MatchAll">
-                  <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
-                  <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
-                </conditions>
-                <action type="Rewrite" url="/" />
-              </rule>
-            </rules>
-          </rewrite>
-          <caching enabled="true" enableKernelCache="true">
-              <profiles>
-                  <add extension=".js" policy="DisableCache" kernelCachePolicy="DisableCache" />
-              </profiles>
-          </caching>
-    </system.webServer>
+  <system.webServer>
+    <staticContent>
+      <remove fileExtension=".json" />
+      <mimeMap fileExtension=".json" mimeType="application/json" />
+      <mimeMap fileExtension=".webmanifest" mimeType="application/manifest+json" />
+    </staticContent>
+  </system.webServer>
 </configuration>
